# snake

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.cpp
src/helpers/: functions.h
src/layout/: cell.cpp  cell.h  grid.cpp  grid.h  theme.h
src/models/: food.cpp  food.h  game.cpp  game.h  snake.cpp  snake.h
